--- a/KY-Vaccinator/KY-Vaccinator.vcxproj
+++ b/KY-Vaccinator/KY-Vaccinator.vcxproj
@@ -151,15 +151,18 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Button.h" />
+    <ClInclude Include="Bypass.h" />
     <ClInclude Include="Config.h" />
     <ClInclude Include="Control.h" />
     <ClInclude Include="Dialog.h" />
     <ClInclude Include="FileUtil.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="ListView.h" />
+    <ClInclude Include="Logger.h" />
     <ClInclude Include="MainDialog.h" />
     <ClInclude Include="Message.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="ProcessUtil.h" />
     <ClInclude Include="rapidxml\rapidxml.hpp" />
     <ClInclude Include="rapidxml\rapidxml_iterators.hpp" />
     <ClInclude Include="rapidxml\rapidxml_print.hpp" />
@@ -172,6 +175,7 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Bypass.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="FileUtil.cpp" />
     <ClCompile Include="KY-Vaccinator.cpp" />
@@ -182,6 +186,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="ProcessUtil.cpp" />
     <ClCompile Include="Routines.cpp" />
   </ItemGroup>
   <ItemGroup>
